Fix bottom edge of main content covered by footer

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -132,5 +132,9 @@
   #content-wrap {
     padding-bottom: 30rem;    /* Footer height */
   }
+
+  main {
+      padding-bottom:10rem;
+  }
   
  
